src/test/ui/generator/pattern-borrow.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/pattern-borrow.rs:19:24
   |
19 |         if let Test::A(ref _a) = test { //~ ERROR borrow may still be in use when generator yields
   |                        ^^^^^^
20 |             yield ();
   |             -------- possible yield occurs here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0626"
